k8s_manifests/prometheus/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
  name: prometheus
  namespace: prometheus-app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.fahmed.org`)
      services:
        - name: my-prometheus-server
          port: 80
